fixing a button alignment

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -258,6 +258,7 @@ body {
     padding: 15px 30px;
     font-size: 1.2em;
     text-decoration: none;
+    text-align: center;
     font-weight: bold;
     border-radius: 5px;
     transition: 0.3s ease;
